upgrade sidebar, add button themes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,10 +2,13 @@
   "Тестовый пример": "Test example",
   "Перевод": "Translate",
   "Главная страница": "Main page",
+  "Главная": "Main page",
+  "О сайте": "About us",
   "Язык": "English",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "An unexpected error has occurred",
   "Обновить страницу": "Refresh the page",
-  "throw error": "throw error"
+  "throw error": "throw error",
+  "Короткий язык": "EN"
 }
