--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,6 @@
   "Произошла непредвиденная ошибка": "An unexpected error has occurred",
   "Обновить страницу": "Refresh the page",
   "throw error": "throw error",
-  "Короткий язык": "EN"
+  "Короткий язык": "EN",
+  "Введите ник": "Введите ник"
 }
