--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
-  "Короткий язык": "RU"
+  "Короткий язык": "RU",
+  "Введите ник": "Введите ник"
 }
