add login module

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,7 @@
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
   "Короткий язык": "RU",
-  "Введите ник": "Введите ник"
+  "Введите ник": "Введите ник",
+  "Авторизация": "Авторизация",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
 }
