--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
   "Обновить страницу": "Refresh the page",
   "throw error": "throw error",
   "Короткий язык": "EN",
-  "Введите ник": "Введите ник"
+  "Введите ник": "Введите ник",
+  "Авторизация": "Авторизация",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
 }
